# nekoscience

./: .env.example  .gitignore  README.md  run_all.sh  run_bot.sh  run_web.sh  start_api.ps1  start_bot.ps1  start_web.ps1  stop_all.sh
api/: Cargo.toml
api/src/: api_keys.rs  main.rs  pp_calc.rs
api/src/calculators/: map_stats.rs  pp_parts.rs  score_pp.rs
api/src/handlers/: map_stats.rs  mod.rs  pp_parts.rs  score_pp.rs
api/src/models/: forum_response.rs  mod.rs  score.rs  skills.rs
api/src/systems/: file_endpoints.rs  forum_db_endpoints.rs  mod.rs
api/src/utils/: db_setup.rs  file_manager.rs  forum_db_manager.rs  get_hits_osu.rs  get_sliders_osu.rs  mod.rs  mods_parser.rs  osu_api_setup.rs  todo
bot/: requirements.txt
bot/src/: auth.py  cfg.py  command_imports.py  config.py  localapi.py  longtext.py  main.py  temp.py
bot/src/models/: score.py
storage/bot_data/: aimslop.txt  speedslop.txt  todo
storage/chat_data/: chat_update.json
storage/web_data/dashboard/: bot_stats.json  last_updated.json
storage/web_data/vote/: vote_data.json
unsorted/: bot_stats_updater.py  run_api.sh
unsorted/myangelfujiya/: app.py  index.html
unsorted/myangelfujiya/darkness/: index.html
unsorted/myangelfujiya/neko_science/: chat_server.py
unsorted/myangelfujiya/templates/: sucsess.html  tryauth.html
unsorted/osu-archive/app/: main.py
unsorted/osu-archive/neko_science/: chat_server.py
web/: requirements.txt
web/src/: game_not_debug.db-shm  game_not_debug.db-wal  main.py
web/src/routers/: chat_auth.py  chat_server.py  darkness_auth.py  darkness_direct.py  darkness_reminders.py  dashboard.py  game.py  neko_chat.py  side_server.py  vote_for_images.py  weakness_auth.py  weakness_direct.py  weakness_reminders.py
web/src/templates/: chat_auth_code.html  darkness_auth_code.html  darkness_direct.html  darkness_reminders.html  dashboard.html  game.html  index.html  vote_home.html  vote_now.html  vote_results.html  weakness_auth_code.html  weakness_direct.html  weakness_reminders.html
(+360 files in other folders)
