[package]
name = "neko_science_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
serde_json = "1"
dotenv = "0.15"
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp.git", branch = "main" }
tempfile = "3.23.0"
temp-env = "0.3.6"
# hyper = { version = "0.14", features = ["full"] } 
futures = "0.3.31"
# rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp.git", branch = "next" }
# rosu-pp = { git = "https://github.com/tsunyoku/rosu-pp.git", branch = "pp-update"}
# rosu-mods = { git = "https://github.com/MaxOhn/rosu-mods.git", branch = "main", features = ["macros"] }