[package]
name = "neko_science_api"
version = "0.1.0"
edition = "2024"

[dependencies]

# Core / Utilities
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"

# Async / Web
tokio = { version = "1", features = ["full"] }
axum = "0.8.7"
futures = "0.3.31"
sqlx = { version = "0.7.0", features = ["sqlite", "runtime-tokio-rustls", "macros"] }

# External / Domain-specific
rosu-pp = { git = "https://github.com/MaxOhn/rosu-pp.git", branch = "main" }

# Testing / Temp files
tempfile = "3.23.0"
temp-env = "0.3.6"
